Fix linter error (newline for multi line declaration)

--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ header {
 nav {
   margin-right: 24px;
 }
+
 .nav {
   height: 100vh;
   width: 100vw;
@@ -279,7 +280,6 @@ nav {
 .btn_flex_end {
   display: flex;
   justify-content: flex-end;
-  /* align-items: center; */
 }
 
 .logo_placeholder {
@@ -363,7 +363,8 @@ main {
 
 .img:hover img {
   transform: scale(1.15, 1.15);
-  box-shadow: 0 15px 10px rgba(64, 83, 252, 0.6),
+  box-shadow:
+    0 15px 10px rgba(64, 83, 252, 0.6),
     0 15px 10px rgba(235, 235, 255, 0.25),
     inset 0 5px 3px rgba(64, 83, 252, 0.6),
     inset 0 5px 3px rgba(235, 235, 255, 0.25);
@@ -709,7 +710,8 @@ form {
 @keyframes scale {
   50% {
     transform: scale(1.2, 1.2);
-    box-shadow: 0 15px 15px rgba(64, 83, 252, 0.6),
+    box-shadow:
+      0 15px 15px rgba(64, 83, 252, 0.6),
       0 15px 15px rgba(235, 235, 255, 0.3),
       inset 0 5px 5px rgba(64, 83, 252, 0.6),
       inset 0 5px 5px rgba(235, 235, 255, 0.3);
@@ -753,10 +755,6 @@ form {
   }
 
   .menu {
-    /* position: unset;
-    height: auto;
-    width: auto;
-    background-color: transparent; */
     display: inline-flex;
     flex-direction: row;
     justify-content: flex-end;
