Add modals section and styling-layout for mobile and desktop modals

--- a/style.css
+++ b/style.css
@@ -170,6 +170,17 @@ textarea::placeholder {
   cursor: pointer;
 }
 
+.btn_flex_center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.btn_flex_end {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .xs-transparent_btn {
   background-color: transparent;
   border: transparent;
@@ -193,6 +204,12 @@ form ul li .action_btn {
   padding: 4px 12px;
   background-color: #ebebff;
   color: var(--primary_b);
+}
+
+.modal .close-btn {
+  position: absolute;
+  top: 30px;
+  right: 30px;
 }
 
 .enabled {
@@ -276,17 +293,6 @@ nav {
   gap: 24px;
 }
 
-.btn_flex_center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn_flex_end {
-  display: flex;
-  justify-content: flex-end;
-}
-
 .logo_placeholder {
   height: 100%;
   display: flex;
@@ -366,6 +372,10 @@ main {
   animation: scale 600ms ease-in-out;
 }
 
+.modal .img img {
+  animation: none;
+}
+
 .img:hover img {
   transform: scale(1.15, 1.15);
   box-shadow:
@@ -374,6 +384,12 @@ main {
     inset 0 5px 3px rgba(64, 83, 252, 0.6),
     inset 0 5px 3px rgba(235, 235, 255, 0.25);
   transition: all 400ms ease-in-out;
+}
+
+.modal .img:hover img {
+  transform: none;
+  box-shadow: none;
+  transition: none;
 }
 
 .card_details {
@@ -417,6 +433,56 @@ main {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+}
+
+/* Modals & Overlay*/
+.modal {
+  position: fixed;
+  top: 1rem;
+  left: 1rem;
+  right: 1rem;
+  border: 1px solid red;
+  z-index: 10;
+  background-color: #fff;
+  height: 95%;
+  overflow-y: scroll;
+  transform: scale(0);
+  transition: 300ms ease-in-out;
+}
+
+.modal.active {
+  transform: scale(1);
+  transition: 300ms ease-in-out;
+}
+
+.modal .work_card {
+  width: 100%;
+  max-width: 100%;
+}
+
+.modal .action {
+  justify-content:flex-start;
+  gap: 12px;
+  padding-top: 25px;
+  margin-top: 18px;
+  border-top: 1px solid #EBECF0;
+}
+
+.overlay {
+  position: fixed;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 5;
+  background-color: rgba(103, 199, 208, .5);
+  pointer-events: none;
+}
+
+.overlay.active {
+  opacity: 1;
+  pointer-events: all;
 }
 
 /* About section layout */
@@ -851,6 +917,48 @@ form {
   .descriptive_txt {
     font-size: 16px;
   }
+
+  /* Modals & Overlay*/
+.modal {
+  top: 50%;
+  left: 50%;
+  width: 90vw;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 300ms ease-in-out;
+}
+
+.modal.active {
+  transform: translate(-50%, -50%) scale(1);
+  transition: 300ms ease-in-out;
+}
+
+.modal .work_card {
+  flex-direction: column;
+}
+
+.modal .work_card .img {
+  width: 100%;
+}
+
+.modal .work_card .img  img{
+  animation: none;
+}
+
+.modal .card_details {
+  width: 100%;
+  max-width: none;
+  flex-direction: row;
+  gap: 24px;
+  padding: 24px 0;
+}
+
+.modal .card_details p {
+  width: 69%;
+}
+
+.modal .card_details .modal_tags_action {
+  width: 30%;
+}
 
   /* Media queries for About Section */
   .about_section {
