--- a/style.css
+++ b/style.css
@@ -444,8 +444,8 @@ main {
   border: 1px solid red;
   z-index: 10;
   background-color: #fff;
-  height: 95%;
-  overflow-y: scroll;
+  /* height: 95%;
+  overflow-y: scroll; */
   transform: scale(0);
   transition: 300ms ease-in-out;
 }
@@ -923,6 +923,8 @@ form {
   top: 50%;
   left: 50%;
   width: 90vw;
+  height: 95vh;
+  overflow-y: scroll;
   transform: translate(-50%, -50%) scale(0);
   transition: 300ms ease-in-out;
 }
@@ -952,8 +954,12 @@ form {
   padding: 24px 0;
 }
 
-.modal .card_details p {
+.modal .card_details .descriptive_txt {
   width: 69%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 0; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .modal .card_details .modal_tags_action {
