Change overlay color

--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ main {
   bottom: 0;
   left: 0;
   z-index: 5;
-  background-color: rgba(103, 199, 208, 0.5);
+  background-color: #0000008a;
   pointer-events: none;
 }
 
