--- a/style.css
+++ b/style.css
@@ -484,7 +484,7 @@ main {
   bottom: 0;
   left: 0;
   z-index: 5;
-  background-color: rgba(103, 199, 208, 0.5);
+  background-color: #0000008a;
   pointer-events: none;
 }
 
@@ -615,8 +615,10 @@ form {
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
 }
+
 .contact_form .alert_msg.active {
   display: block;
+}
 
 /* ******************* *
    Animations
