--- a/style.css
+++ b/style.css
@@ -611,9 +611,8 @@ form {
   display: none;
   background-color: #aa161d;
   color: #fff;
-  padding: 2px 4px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  padding: 4px 4px;
+  border-radius: 4px;
 }
 
 .contact_form .alert_msg.active {
